# imr-proxy

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
configs/: imr-proxy.example.yaml
docs/: architecture.md  certificates.md  cli-reference.md  findings.md  privacy-redaction.md  troubleshooting.md  usage.md  web-ui.md
imr_proxy/: __init__.py  app.py  cli.py  config.py  constants.py  logging.py  realtime.py  version.py
imr_proxy/findings/: cookies.py  cors.py  engine.py  headers.py  redirects.py  references.py  responses.py  tls.py  urls.py
imr_proxy/models/: __init__.py  config.py  finding.py  flow.py  session.py
imr_proxy/proxy/: addons.py  capture.py  certificates.py  engine.py  redaction.py  replay.py  scope.py  tls.py
imr_proxy/reporting/: exporters.py  har.py  html.py  markdown.py
imr_proxy/storage/: database.py  migrations.py  repositories.py  schema.sql
imr_proxy/terminal/: live.py  tables.py
imr_proxy/web/: api.py  (+3 more)
scripts/: dev_linux.sh  dev_windows.ps1  install_linux.sh  install_windows.cmd  install_windows.ps1
tests/: test_auth_users.py  test_cli_smoke.py  test_compact_console.py  test_config.py  test_exporters.py  test_findings_cookies.py  test_findings_headers.py  test_findings_urls_redirects.py  test_flow_capture_lifecycle.py  test_flow_search_filters.py  test_linux_installer_static.py  test_proxy_engine_options.py  test_redaction.py  test_scope.py  test_sqlite_concurrency.py  test_storage_and_ca.py  test_storage_migration_traffic.py  test_version.py  test_web_ui.py  test_websocket_live.py
(+10 files in other folders)
