[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imr-proxy"
version = "0.1.8"
description = "Defensive HTTP/HTTPS inspection proxy for authorized security testing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "imr-proxy contributors" }]
keywords = ["proxy", "security", "http", "https", "mitmproxy", "devsecops"]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "mitmproxy>=11.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
  "orjson>=3.10.0",
  "brotli>=1.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
imr-proxy = "imr_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imr_proxy*"]
exclude = ["configs*", "docs*", "scripts*", "tests*"]

[tool.setuptools.package-data]
imr_proxy = ["storage/schema.sql", "reporting/templates/*.j2", "web/templates/*.html", "web/static/*.css", "web/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
